--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@themesberg/flowbite": "^1.3.0",
         "autoprefixer": "^10.4.7",
         "axios": "^0.21",
         "flowbite": "^1.4.7",
+        "jquery-ui": "^1.13.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.4"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.53.0",
+        "sass-loader": "^12.1.0",
+        "slick-carousel": "^1.8.1",
+        "tailwindcss": "^3.1.5"
+    },
+    "dependencies": {
+        "swiper": "^8.3.1"
     }
 }
